LIST OF CHANGES

 - Where semantic names are not possible, standard file and directory
   names are based on sha256 digest of the composition JSON
   (previously the md5 digest was used). This makes possible
   conversion from the name back to the composition using the ml
   warehouse records, which might be useful in case of clients'
   queries.

release 89.0.1
 - live test patch to reflect a change in spiked PhiX tag index

release 89.0.0
 - the samplesheet driver's parser extended to cope with data from
   multiple runs
 - samplesheet generator extended to cache data for multiple runs
 - status monitor will now work only with RFC 3339 compliant
   timestamps defined in WTSI::DNAP::Utilities::Timestamp
 - pipeline configuration module is moved to this package from
   npg_seq_pipeline package in order for the product configuration
   be accessible from other packages 
 - staging area daemon modified so processing for each folder is wrapped as
   try/catch block

release 88.2.1
 - patch to accommodate different URL info passed to the CGI
   module by different Apache httpd versions

release 88.2
 - scripts to list run folders that are candidates for deletion in
   the Data Recovery area
 - status monitor: improved logging, which now shows timestamps
 - alleviate differences in cloud hosts time zone configuration by
   storing UTC offset as a part of the timestamp in serialized
   run and lane status objects

release 88.1.1
 - test data fixes following ml warehouse schema changes, see
   https://github.com/wtsi-npg/ml_warehouse/pull/104 for details

release 88.1
 - status monitor running with inotify disabled should be able to
   recognise when a cached file is changed
 - 2 sec sleep introduced in the beginning of the job that saves
   statuses to a file to ensure no two statuses of the same run/lane
   have the same timestamp so that the iscurrent db flag could be
   assigned inambigiously when the statuses are saved to a database

release 88.0